--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 
 html,body {height: 100%; width: 100%; margin: 0px; padding: 0px;}
 
+body {background-color: rgb(215, 215, 215);}
+
 
 #wrap {
     height: 100%;
@@ -23,7 +25,7 @@ html,body {height: 100%; width: 100%; margin: 0px; padding: 0px;}
 }
 
 .display {
-    /* border: 1px solid white; */
+    border: 3px solid white;
     color: white;
     width: 90%;
     height: 20%;
@@ -36,13 +38,25 @@ html,body {height: 100%; width: 100%; margin: 0px; padding: 0px;}
     padding-right: 20px;
     font-size: 2rem;
     font-weight: bold;
+    position: relative;
+}
+
+.top {
+    position: absolute;
+    top: 10px;
+    font-size: 1rem;
+}
+
+.bottom {
+    position: absolute;
+    bottom: 10px;
 }
 
 .items {
     height: 70%;
     width: 90%;
     margin: 15px auto;
-    /* border: 1px solid black; */
+    /* border: 1px solid white; */
     border-radius: 15px;
     display: flex;
     flex-wrap: wrap;
